--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+<!DOCTYPE html>
+<html>
 <h1> Hellow Git World! </h1>
 
 <div>
@@ -26,3 +29,4 @@
 <div>
     add comments to track
 </div>
+</html>
